스프링부트활용

--- a/spring-boot-experience/src/main/resources/application.properties
+++ b/spring-boot-experience/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 server.port=8080
 
 ilhoon.test=test
+
+ilhoon-prop.name=hi
+ilhoon-prop.age=26
+ilhoon-prop.fullName=hihihi
+ilhoon-prop.sessionTimeout=100
