--- a/spring-boot-experience/src/main/resources/application.properties
+++ b/spring-boot-experience/src/main/resources/application.properties
@@ -7,3 +7,10 @@ ilhoon-prop.name=hi
 ilhoon-prop.age=26
 ilhoon-prop.fullName=hihihi
 ilhoon-prop.sessionTimeout=100
+
+spring.profiles.active=test
+
+# 로그 색상 표현
+spring.output.ansi.enabled=always
+# org.hoon 패키지 하위 debug 레벨 로깅 활성화
+#logging.level.org.hoon=debug
