--- a/spring-boot-data/src/main/resources/application.properties
+++ b/spring-boot-data/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/springboot?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=mariadb
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
