--- a/spring-boot-data/src/main/resources/application.properties
+++ b/spring-boot-data/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 spring.redis.port=6379
+
+spring.data.neo4j.username=neo4j
+spring.data.neo4j.password=1111
