--- a/spring-boot-rest-api/src/main/resources/application.properties
+++ b/spring-boot-rest-api/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 server.port=8080
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.datasource.username=postgres
+spring.datasource.password=pass
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.sql=info
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
