--- a/spring-boot-rest-api/pom.xml
+++ b/spring-boot-rest-api/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
             <version>2.3.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
