외부설정값

--- a/spring-boot-rest-api/src/test/resources/application-test.properties
+++ b/spring-boot-rest-api/src/test/resources/application-test.properties
@@ -6,3 +6,10 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+my-app.admin-user-name=admin
+my-app.admin-password=1234
+my-app.user-user-name=1hoon
+my-app.user-password=1234
+my-app.client-id=myApp
+my-app.client-secret=pass
