--- a/spring-boot-rest-api/src/main/resources/application.properties
+++ b/spring-boot-rest-api/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.sql=info
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+my-app.admin-user-name=admin
+my-app.admin-password=1234
+my-app.user-user-name=1hoon
+my-app.user-password=1234
+my-app.client-id=myApp
+my-app.client-secret=pass
